--- a/benchmarks/home01.html
+++ b/benchmarks/home01.html
@@ -1,3 +1,4 @@
+<!--Archived document for tutorial-->
 <!DOCTYPE html>
 <html>
 
@@ -16,20 +17,20 @@
   </header>
 
   <div class="w3-container" id="home">
-    
+
     <form class="w3-container w3-card-4" action="\index.php">
-    <h2>Welcome</h2>
-    <select class="w3-select w3-border" name="event">
-      <option value="" disabled selected>Pick an event</option>
-      <option value="2023onbar">Georgian</option>
-      <option value="2023onnob">North Bay</option>
-      <option value=2023onwat">Waterloo</option>
-      <option value="2023onwin">Windsor</option>
-    </select>
-    <p><button class="w3-btn w3-indigo">Scout Event</button></p>
+      <h2>Welcome</h2>
+      <select class="w3-select w3-border" name="event">
+        <option value="" disabled selected>Pick an event</option>
+        <option value="2023onbar">Georgian</option>
+        <option value="2023onnob">North Bay</option>
+        <option value=2023onwat">Waterloo</option>
+        <option value="2023onwin">Windsor</option>
+      </select>
+      <p><button class="w3-btn w3-indigo">Scout Event</button></p>
     </form>
   </div>
-  
+
   <script src="script.js"></script>
 
   <!--
