Finished begin scouting html

--- a/benchmarks/home01.html
+++ b/benchmarks/home01.html
@@ -24,7 +24,7 @@
         <option value="" disabled selected>Pick an event</option>
         <option value="2023onbar">Georgian</option>
         <option value="2023onnob">North Bay</option>
-        <option value=2023onwat">Waterloo</option>
+        <option value="2023onwat">Waterloo</option>
         <option value="2023onwin">Windsor</option>
       </select>
       <p><button class="w3-btn w3-indigo">Scout Event</button></p>
