--- a/benchmarks/beginScouting03.html
+++ b/benchmarks/beginScouting03.html
@@ -36,7 +36,7 @@
   <!--**************************************************
   Select Match Screen
   ****************************************************-->
-  <div class="w3-container" id="selectMatchScreen"  style="display: none;">
+  <div class="w3-container" id="selectMatchScreen" style="display: none;">
     <h2>Match
       <select class="w3-select">
         <option>1</option>
@@ -70,9 +70,42 @@
     </table>
 <button class="w3-button w3-hover-green w3-indigo w3-block">Scout Match</button>
   </div>
-  <!--End Select Match
-  
-  
+  <!--End Select Match-->
+
+<!--**************************************************
+  Begin Scouting Screen
+  ****************************************************-->
+  <div class="w3-container" id="beginScoutingScreen"> 
+    <h2>Preloaded</h2>
+    <div class="w3-bar w3-indigo">
+      <button class="w3-bar-item w3-button">
+        <img src="images/cone.jpeg" alt="cone" style="width: 50px;" />
+      </button>
+      <button class="w3-bar-item w3-button">
+        <img src="images/cube.jpeg" alt="cube"  style="width: 50px;"/>
+      </button>
+      <button class="w3-bar-item w3-button">
+        <img src="images/none.png" alt="none"  style="width: 50px;" />
+      </button>
+    </div>
+    
+    <div class="w3-section">
+      <select class="w3-select w3-border" name="bsStartPosition">
+        <option value="" disabled selected>Starting Position</option>
+        <option value="LoadingStation">Loading Station Side</option>
+        <option value="Center">Center</option>
+        <option value="Far Side">Far Side</option>
+      </select>
+    </div>
+
+    <div class="w3-section">
+      <button class="w3-btn w3-green w3-block">Start Match</button>
+    </div>
+    <div class="w3-section">
+      <button class="w3-btn w3-red w3-block">&#8592;</button>
+    </div>
+    
+  </div><!--End Begin Scouting-->
   <script src="script.js"></script>
 
   <!--
